--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <td>Khairul</td>
         <td>Khairul</td>
         <td>Khairul</td>
-        <td><s>Erina</s></td>
+        <td>Erina</td>
         <td>Erina</td>
         </tr>
     
